-feature: path for perl/shell like path for php to be used in Data Input Methods
-feature: introduce |graph_start| and |graph_end| for use with COMMENT/GPRINT or the like
-feature: duplicate Data Query (duplicates all associated graph templates and suggested values)
-feature: remove/rename all api_ functions, dropping api_

0.8.8a
-bug#0002207: cannot export graph templates 

0.8.8
-bug#0002056: un-initialized datetime used for host status (was: Zero length string != NULL)
-bug#0002081: In Graph Management, search display graph title breaks when using pattern symbol "/"
-bug#0002132: need to include pa.sql with the 0.8.7i and future releases
-bug#0002134: rebuild_poller_cache.php --host-id deletes table poller_item completely
-bug#0002141: cacti.sql missing BTREE PRIMARY KEY for poller_output 
-bug#0002146: Utilities -> View Log File -> refresh does not work
-bug#0002150: usort_data_query_index() is broken -> graph order for hosts with data query sort option fails
-bug#0002151: When building HTML forms with sub_checkbox on_change parameter is not used 
-bug#0002152: Issue with filter on graphs_new.php
-bug#0002153: Cant search for patterns containing a forward-slash
-bug#0002156: CDEF strings are not escaped before passed to rrdtool command
-bug#0002158: Minor changes to grammar of displayed messages
-bug#0002165: Using data input field in data source name (related to 2079 in 0.8.7i)
-bug#0002167: New poller hook poller_finishing
-bug#0002172: structure_rra_paths.php does not handle disabled data sources
-bug#0002174: poller_item.host_id has wrong type 
-bug#0002178: typo in include/global_form.php: Mimimum -> Minimum
-bug#0002181: session_unregister (use in functions.php) doesn't exist anymore in PHP 5.4 
-bug#0002182: When there is no suitable (unique) index, graphs are not shown in data query ordering on host leafs
-bug#0002189: Proper graph hooks
-bug#0002191: Refresh issues