@@ -503,7 +503,18 @@ function rrdtool_function_graph($local_graph_id, $rra_id, $graph_data_array, &$r
 	include_once(CACTI_BASE_PATH . "/lib/variables.php");
 	include_once(CACTI_BASE_PATH . "/lib/time.php");
 
-	/* set the rrdtool default font */
+	/* prevent command injection
+	 * This function prepares an rrdtool graph statement to be executed by the web server.
+	 * We have to take care, that the attacker does not insert shell code.
+	 * As some rrdtool parameters accept "Cacti variables", we have to perform the
+	 * variable substitution prior to vulnerability checks.
+	 * We will enclose all parameters in quotes and substitute quotation marks within
+	 * those parameters. 
+	 */
+ 
+	/* rrdtool fetches the default font from it's execution environment
+	 * you won't find that default font on the rrdtool statement itself!
+	 * set the rrdtool default font via environment variable */
 	if (read_config_option("path_rrdtool_default_font")) {
 		putenv("RRD_DEFAULT_FONT=" . read_config_option("path_rrdtool_default_font"));
 	}
@@ -775,7 +786,7 @@ function rrdtool_function_graph($local_graph_id, $rra_id, $graph_data_array, &$r
 					to a function that matches the digits with letters. rrdtool likes letters instead
 					of numbers in DEF names; especially with CDEF's. cdef's are created
 					the same way, except a 'cdef' is put on the beginning of the hash */
-					$graph_defs .= "DEF:" . generate_graph_def_name(strval($i)) . "=\"$data_source_path\":\"" . $graph_item["data_source_name"] . "\":" . $consolidation_functions[$graph_cf];
+					$graph_defs .= "DEF:" . generate_graph_def_name(strval($i)) . "=\"$data_source_path\":" . cacti_escapeshellarg($graph_item["data_source_name"]) . ":" . $consolidation_functions[$graph_cf];
 					if ($graph_item["shift"] == CHECKED && $graph_item["value"] > 0) {	# create a SHIFTed DEF
 						$graph_defs .= ":start=" . $graph["graph_start"] . "-" . $graph_item["value"];
 						$graph_defs .= ":end=" . $graph["graph_end"] . "-" . $graph_item["value"];
@@ -1122,9 +1133,9 @@ function rrdtool_function_graph($local_graph_id, $rra_id, $graph_data_array, &$r
 			$cdef_string = rrd_substitute_device_query_data($cdef_string, $graph, $graph_item);
 
 			/* make the initial "virtual" cdef name: 'cdef' + [a,b,c,d...] */
-			$cdef_graph_defs .= "CDEF:cdef" . generate_graph_def_name(strval($i)) . "='";
-			$cdef_graph_defs .= $cdef_string;
-			$cdef_graph_defs .= "' \\\n";
+			$cdef_graph_defs .= "CDEF:cdef" . generate_graph_def_name(strval($i)) . "=";
+			$cdef_graph_defs .= cacti_escapeshellarg(sanitize_cdef($cdef_string), true);
+			$cdef_graph_defs .= " \\\n";
 
 			/* the CDEF cache is so we do not create duplicate CDEF's on a graph */
 			$cdef_cache{$graph_item["cdef_id"]}{$graph_item["data_template_rrd_id"]}[$cf_id] = "$i";
@@ -1155,9 +1166,9 @@ function rrdtool_function_graph($local_graph_id, $rra_id, $graph_data_array, &$r
 #				$vdef_string = str_replace("SIMILAR_DATA_SOURCES_DUPS", $magic_item["SIMILAR_DATA_SOURCES_DUPS"], $vdef_string);
 
 				/* make the initial "virtual" vdef name */
-				$vdef_graph_defs .= "VDEF:vdef" . generate_graph_def_name(strval($i)) . "='";
-				$vdef_graph_defs .= $vdef_string;
-				$vdef_graph_defs .= "' \\\n";
+				$vdef_graph_defs .= "VDEF:vdef" . generate_graph_def_name(strval($i)) . "=";
+				$vdef_graph_defs .= cacti_escapeshellarg(sanitize_cdef($vdef_string));
+				$vdef_graph_defs .= " \\\n";
 
 				/* the VDEF cache is so we do not create duplicate VDEF's on a graph,
 				 * but take info account, that same VDEF may use different CDEFs
@@ -1734,7 +1745,7 @@ function rrdtool_function_xport($local_graph_id, $rra_id, $xport_data_array, &$x
 					to a function that matches the digits with letters. rrdtool likes letters instead
 					of numbers in DEF names; especially with CDEF's. cdef's are created
 					the same way, except a 'cdef' is put on the beginning of the hash */
-					$xport_defs .= "DEF:" . generate_graph_def_name(strval($i)) . "=\"$data_source_path\":\"" . $xport_item["data_source_name"] . ":\"" . $consolidation_functions[$xport_cf] . RRD_NL;
+					$xport_defs .= "DEF:" . generate_graph_def_name(strval($i)) . "=\"$data_source_path\":" . cacti_escapeshellarg($xport_item["data_source_name"]) . ":" . $consolidation_functions[$xport_cf] . RRD_NL;
 
 					$cf_ds_cache{$xport_item["data_template_rrd_id"]}[$xport_cf] = "$i";
 
@@ -2036,9 +2047,9 @@ function rrdtool_function_xport($local_graph_id, $rra_id, $xport_data_array, &$x
 			$cdef_string = rrd_substitute_device_query_data($cdef_string, $graph, $xport_item);
 
 			/* make the initial "virtual" cdef name: 'cdef' + [a,b,c,d...] */
-			$cdef_xport_defs .= "CDEF:cdef" . generate_graph_def_name(strval($i)) . "='";
-			$cdef_xport_defs .= $cdef_string;
-			$cdef_xport_defs .= "' \\\n";
+			$cdef_xport_defs .= "CDEF:cdef" . generate_graph_def_name(strval($i)) . "=";
+			$cdef_xport_defs .= cacti_escapeshellarg(sanitize_cdef($cdef_string));
+			$cdef_xport_defs .= " \\\n";
 
 			/* the CDEF cache is so we do not create duplicate CDEF's on a graph */
 			$cdef_cache{$xport_item["cdef_id"]}{$xport_item["data_template_rrd_id"]}[$cf_id] = "$i";
@@ -2304,33 +2315,33 @@ function rrdgraph_scale($graph) {
 			case GRAPH_ALT_AUTOSCALE_MIN: /* autoscale-max, accepts a given lower limit */
 				$scale = "--alt-autoscale-max" . RRD_NL;
 				if ( is_numeric($graph["lower_limit"])) {
-					$scale .= "--lower-limit=" . $graph["lower_limit"] . RRD_NL;
+					$scale .= "--lower-limit=" . cacti_escapeshellarg($graph["lower_limit"]) . RRD_NL;
 				}
 				break;
 			case GRAPH_ALT_AUTOSCALE_MAX: /* autoscale-min, accepts a given upper limit */
 				if (read_config_option("rrdtool_version") != RRD_VERSION_1_0) {
 					$scale = "--alt-autoscale-min" . RRD_NL;
 					if ( is_numeric($graph["upper_limit"])) {
-						$scale .= "--upper-limit=" . $graph["upper_limit"] . RRD_NL;
+						$scale .= "--upper-limit=" . cacti_escapeshellarg($graph["upper_limit"]) . RRD_NL;
 					}
 				}
 				break;
 			case GRAPH_ALT_AUTOSCALE_LIMITS: /* auto_scale with limits */
 				$scale = "--alt-autoscale" . RRD_NL;
 				if ( is_numeric($graph["upper_limit"])) {
-					$scale .= "--upper-limit=" . $graph["upper_limit"] . RRD_NL;
+					$scale .= "--upper-limit=" . cacti_escapeshellarg($graph["upper_limit"]) . RRD_NL;
 				}
 				if ( is_numeric($graph["lower_limit"])) {
-					$scale .= "--lower-limit=" . $graph["lower_limit"] . RRD_NL;
+					$scale .= "--lower-limit=" . cacti_escapeshellarg($graph["lower_limit"]) . RRD_NL;
 				}
 				break;
 		}
 	}else{
 		if ( is_numeric($graph["upper_limit"])) {
-			$scale .= "--upper-limit=" . $graph["upper_limit"] . RRD_NL;
+			$scale .= "--upper-limit=" . cacti_escapeshellarg($graph["upper_limit"]) . RRD_NL;
 		}
 		if ( is_numeric($graph["lower_limit"])) {
-			$scale .= "--lower-limit=" . $graph["lower_limit"] . RRD_NL;
+			$scale .= "--lower-limit=" . cacti_escapeshellarg($graph["lower_limit"]) . RRD_NL;
 		}
 	}
 
